2005-06-12  Hubert Figuiere  <hfiguiere@teaser.fr>

	* libgphoto2_port/gphoto2-port.h: new disk settings struct.

	* libgphoto2_port/gphoto2-port.c (gp_port_set_info): copy
	disk port settings

	* libgphoto2_port/gphoto2-port-result.[ch]: 
	added GP_HAL_ERROR

	* disk/Makefile.am: added HAL flags

	* disk/disk.c (gp_port_library_list): list mounted filesystems 
	using libhal.

	* configure.in (HAL_CFLAGS): detect libhal

2005-06-11  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* libgphoto2_port/Makefile.am: link libgphoto2_port 
	  with explicit symbol list

2005-06-11  Hubert Figuiere  <hfiguiere@teaser.fr>

	* disk/*:
	* configure.in: added disk/ subdir
	* libgphoto2_port/gphoto2-port-info-list.h: added GP_PORT_DISK.

2005-06-08  Theodore Kilgota  <kilgota@auburn.edu>

	* usb/libusb.c: added gp_port_usb_msg_interface_write_lib and
	  gp_port_usb_msg_interface_read_lib functions, and corresponding 
	  entries in "ops" list, in order to support 0x41 and 0xc1 request 
	  types needed by Sonix sn9c2028 cameras.
	* libgphoto2_port/gphoto2_port_library.h: msg_interface_write and 
	  msg_interface_read declared
	* libgphoto2_port/gphoto2_port.h: gp_port_usb_msg_interface_write and 
	  gp_port_usb_msg_interface_read functions declared
	* libgphoto2_port/gphoto2_port.c: gp_port_usb_msg_interface_write and 
	  gp_port_usb_msg_interface_read functions added
	      
2005-03-04  Marcus Meissner  <marcus@jet.franken.de>

	* serial/unix.c: make IUCLC check more generic.
	  (from Robert Millan)

2005-02-16  Marcus Meissner  <marcus@jet.franken.de>

	* usb/libusb.c: also detach the usb-storage driver
	  when we open a USB device. We can support those
	  cameras.

2005-02-12  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: fix shell syntax error I introduced
	  in 2002-11 and no one noticed except for the Debian
	  packagers

2005-01-17  Colin Marquardt  <colin@marquardt-home.de>

	* po/ja.po: Update thanks to Takeshi AIHANA.
